# genanki-rs-rev

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: rust.yml
assets/: anki_collection.py  check_media.py  drop.py
crates/constants/: Cargo.toml
crates/genanki/: Cargo.toml
crates/genanki-builder/: Cargo.toml
crates/genanki-builder/src/: deck.rs  field.rs  lib.rs  model.rs  note.rs  template.rs
crates/genanki-core/: Cargo.toml
crates/genanki-core/src/: card.rs  config.rs  deck.rs  error.rs  guid.rs  lib.rs  model.rs  note.rs
crates/genanki-export/: Cargo.toml
crates/genanki-export/src/: lib.rs  package.rs
crates/genanki-macros/: Cargo.toml
crates/genanki-macros/src/: lib.rs
crates/genanki-storage/: Cargo.toml
crates/genanki-storage/src/: cards.rs  col.sql  collection.rs  decks.rs  lib.rs  models.rs  notes.rs  schema.rs
crates/genanki/src/: lib.rs
sql/: default_inject.sql  schema.sql
src/: builtin_models.rs  card.rs  constans.rs  constants.rs  db_entries.rs  deck.rs  error.rs  lib.rs  model.rs  note.rs  package.rs  util.rs
src/builder/: deck.rs  field.rs  mod.rs  model.rs  note.rs  template.rs
src/builders/: field.rs  template.rs
src/core/: card.rs  config.rs  deck.rs  error.rs  guid.rs  mod.rs  model.rs  note.rs
src/export/: media.rs  mod.rs  package.rs
src/storage/: cards.rs  collection.rs  decks.rs  mod.rs  models.rs  notes.rs  schema.rs
tests/: README.md  builtin_models_tests.rs  deck_tests.rs  export_integration_tests.rs  lib_tests.rs  mod.rs  model_tests.rs  note_tests.rs  package_tests.rs
