[workspace]
resolver = "2"
members = [
    "crates/genanki-core",
    "crates/genanki-storage",
    "crates/genanki-macros",
    "crates/genanki-builder",
    "crates/genanki-export",
    "crates/genanki",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Whth/genanki-rs-rev"
authors = ["genanki-rs contributors"]

[workspace.dependencies]
# Re-exported dependencies
rusqlite = { version = "0.38.0", features = ["bundled"] }
tempfile = "3.24.0"
zip = "7.0.0"
serde_json = "1.0.147"
fancy-regex = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
ramhorns = "1.0.1"
thiserror = "2.0.17"
blake3 = "1.8.2"
hex = "0.4.3"

# Dev dependencies
anyhow = "1.0.100"
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
serial_test = "3.2.0"
uuid = { version = "1.19", features = ["v4"] }
