[package]
name = "genanki-rs-rev"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/Whth/genanki-rs-rev"
authors = ["genanki-rs contributors"]
description = "Crate to create decks for the open source flashcard platform Anki. Based on Python library genanki"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
blake3 = "1.8.2"
hex = "0.4.3"
fancy-regex = "0.17.0"
ramhorns = "1.0.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tempfile = "3.24.0"
zip = { version = "7.0.0", optional = true }
anyhow = "1.0.100"

[features]
default = []
export = ["zip"]

[dev-dependencies]
pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
serial_test = "3.2.0"
uuid = { version = "1.19", features = ["v4"] }
