[project]
name = "genanki-rs-rev"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "anki>=25.9.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"




