[package]
name = "genanki-builder"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Builder patterns for genanki-rs"

[dependencies]
genanki-core = { path = "../genanki-core" }
anyhow = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
