[package]
name = "genanki-core"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core data structures for genanki-rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
fancy-regex = { workspace = true }
ramhorns = { workspace = true }
rusqlite = { workspace = true, optional = true }
zip = { workspace = true, optional = true }

[features]
default = []
database = ["rusqlite"]
export = ["zip"]

[dev-dependencies]
anyhow = { workspace = true }
