[package]
name = "genanki-storage"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage layer for genanki-rs"

[dependencies]
rusqlite = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
genanki-core = { path = "../genanki-core", features = ["database"] }

[dev-dependencies]
anyhow = { workspace = true }
